add tagging system - resolves #1

--- a/transmission-jobs.default.yml
+++ b/transmission-jobs.default.yml
@@ -7,8 +7,13 @@ transmission:
 #   api_key: f00
 
 # jobs: 
+# - name: tag Fedora, Debian trackers as linux
+#   tag:
+#     name: linux
+#     condition: |-
+#       any(Torrent.AnnounceHostnames(), {# in ["torrrent.fedoraproject.org", "bttracker.debian.org"]})
 #   - name: some optional name
 #     remove:
-#       condition: Torrent.Status.String() == "seeding" && Torrent.UploadRatio >= 10.0
+#       condition: "linux" not in Torrent.Tags && Torrent.Status.String() == "seeding" && Torrent.UploadRatio >= 10.0
 #       delete_local: true
 jobs: []
