correct example typo

--- a/transmission-jobs.default.yml
+++ b/transmission-jobs.default.yml
@@ -11,7 +11,7 @@ transmission:
 #   tag:
 #     name: linux
 #     condition: |-
-#       any(Torrent.AnnounceHostnames(), {# in ["torrrent.fedoraproject.org", "bttracker.debian.org"]})
+#       any(Torrent.AnnounceHostnames(), {# in ["torrent.fedoraproject.org", "bttracker.debian.org"]})
 #   - name: some optional name
 #     remove:
 #       condition: "linux" not in Torrent.Tags && Torrent.Status.String() == "seeding" && Torrent.UploadRatio >= 10.0
